cspm/cspm-platform/services/inventory-collector/output/588989875114/us-west-2/ec2_20/describe_security_groups/describe_security_groups_output_20250603_143854.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-0f1e7450c10f9d30f",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0c7b2d7cf44e2f711",
      "SecurityGroupArn": "arn:aws:ec2:us-west-2:588989875114:security-group/sg-0f1e7450c10f9d30f",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-0f1e7450c10f9d30f"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-07c101d3811e04f6b",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "tcp",
          "FromPort": 0,
          "ToPort": 65535,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "Tags": [
        {
          "Key": "Environment",
          "Value": "dev"
        },
        {
          "Key": "Name",
          "Value": "cloud-security-sg"
        }
      ],
      "VpcId": "vpc-0c7b2d7cf44e2f711",
      "SecurityGroupArn": "arn:aws:ec2:us-west-2:588989875114:security-group/sg-07c101d3811e04f6b",
      "OwnerId": "588989875114",
      "GroupName": "terraform-20240901113253546000000001",
      "Description": "Managed by Terraform",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 0,
          "ToPort": 65535,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-b46e3dd2",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e00f9b84",
      "SecurityGroupArn": "arn:aws:ec2:us-west-2:588989875114:security-group/sg-b46e3dd2",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-3",
      "Description": "launch-wizard-3 created 2016-07-29T19:35:28.849+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 0,
          "ToPort": 65535,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 993,
          "ToPort": 993,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 0,
          "ToPort": 65535,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-826dbbe4",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e00f9b84",
      "SecurityGroupArn": "arn:aws:ec2:us-west-2:588989875114:security-group/sg-826dbbe4",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-2",
      "Description": "launch-wizard-2 created 2016-06-08T20:51:23.993+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-3165b357",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e00f9b84",
      "SecurityGroupArn": "arn:aws:ec2:us-west-2:588989875114:security-group/sg-3165b357",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-1",
      "Description": "launch-wizard-1 created 2016-06-08T20:38:31.735+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-3871a75e",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e00f9b84",
      "SecurityGroupArn": "arn:aws:ec2:us-west-2:588989875114:security-group/sg-3871a75e",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-3871a75e"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "30a7f570-6859-4cf7-9809-77eee0f96195",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "30a7f570-6859-4cf7-9809-77eee0f96195",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "vary": "accept-encoding",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "5219",
      "date": "Tue, 03 Jun 2025 14:39:07 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
